# carun

./: .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  credits.md  game.js  index.html  main.py  pyproject.toml  styles.css
backend/: alembic.ini  run_dev.py  run_server.py
backend/alembic/: env.py
backend/app/: auth_utils.py  config.py  db.py  deps.py  main.py  seed.py  tournament_rooms.py
backend/tests/: conftest.py  test_auth_display_name.py  test_frontend_index.py  test_tournaments.py  test_tracks_visibility.py
docs/: AI.md  NPC.md  editor.md  menus.MD  menus.md
frontend/: asset-demo.html  audio-demo.html  index.html  package.json  privacy.html  styles.css  terms.html
frontend/js/: ambient-animals.js  api.js  asset-demo.js  asset-sprites.js  audio-demo.js  audio.js  game-audio.js  game-loop.js  main.js  material.js  menus.js  parameters.js  particles.js  physics.js  polygon-clean.js  render.js  snackbar.js  state.js  taglines.js  tournament-room.js  track.js  utils.js
frontend/tests/: asset-sprites.test.mjs  editor-track-management.test.mjs  finish-overlay-records.test.mjs  game-loop-performance.test.mjs  menu-render-model.test.mjs  race-position.test.mjs  race-roster.test.mjs  screen-boundaries.test.mjs  track-catalog-api.test.mjs  (+3 more)
js/: game-loop.js  main.js  material.js  menus.js  parameters.js  physics.js  polygon-clean.js  render.js  state.js  track.js
scripts/: deploy.py  sanitize_locks.py
tracks/: carun-track-overlaps.json  carun-track-switchback.json  index.json  neve2.json  to-test-overlaps.json
(+33 files in other folders)
