[project]
name = "carun"
version = "0.1.0"
description = "Drive. Drift. Repeat."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["backend/tests"]
